fixed measurments page on mobile

--- a/styles/measure.css
+++ b/styles/measure.css
@@ -1,7 +1,7 @@
 .measurement-main {
   display: flex;
   width: 100%;
-  height: 85%;
+  height: 90%;
 }
 
 .beforeLoaded {
@@ -13,6 +13,7 @@
   overflow: scroll;
   display: flex;
   width: 350px;
+  height: 100%;
   flex-direction: column;
 }
 
@@ -26,9 +27,10 @@ ul {
 li {
   display: flex;
   justify-content: space-between;
-  padding-bottom: 10px;
+  align-items: center;
   width: 100%;
   font-weight: bold;
+  margin-bottom: 10px;
 }
 
 p {
@@ -40,7 +42,7 @@ p {
 
 input {
   border: solid 1px;
-  width: 20px;
+  width: 40px;
   font-size: 16px;
 }
 
