--- a/styles/styles.css
+++ b/styles/styles.css
@@ -128,7 +128,6 @@ button {
 * {
   /* disable text selection*/
   -webkit-touch-callout: none; /* iOS Safari */
-  -webkit-user-select: none; /* Safari */
   -khtml-user-select: none; /* Konqueror HTML */
   -moz-user-select: none; /* Old versions of Firefox */
   -ms-user-select: none; /* Internet Explorer/Edge */
